Resolvendo exercícios do dia 1

--- a/1 - Fundamentos/3 - Introdução à HTML e CSS/1 - HTML & CSS - Estruturas de página/exercicios/3.1/index.html
+++ b/1 - Fundamentos/3 - Introdução à HTML e CSS/1 - HTML & CSS - Estruturas de página/exercicios/3.1/index.html
@@ -8,10 +8,10 @@
     <h1>Exercícios de fíxação</h1>
     <p><strong>1</strong> - Uma lista das pessoas que eu já fiz amizade na Trybe:</p>
         <ul>
-            <li>Pessoa1</li>
-            <li>Pessoa2</li>
-            <li>Pessoa3</li>
-            <li>Pessoa4</li>
+            <li><a href="#pessoa1"> Pessoa1</a></li>
+            <li><a href="#Pessoa2"> Pessoa2</a></li>
+            <li><a href="#Pessoa3"> Pessoa3</a></li>
+            <li><a href="#Pessoa4"> Pessoa4</a></li>
         </ul>
     <p><strong>2</strong> - Uma imagem que venha de uma URL externa.</p>
         <img src="https://encrypted-tbn0.gstatic.com/
@@ -22,5 +22,25 @@
         <img src="Jean foto.png" alt="Eu estou emcima da torre Mirante do Parque do 
         Rio Branco em Boa Vista/RR" 
         width="300px">
+    <P id="pessoa1"> Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 
+          Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 
+          Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 
+          Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1 Pessoa1</P>
+    <P id="Pessoa2">Pessoa2 Pessoa2Pessoa2Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2
+       Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2
+       Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2
+       Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2
+       Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2 Pessoa2</P>
+    <P id="Pessoa3">Pessoa3  Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 v 
+      Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 vPessoa3 Pessoa3 Pessoa3 Pessoa3
+      Pessoa3 vPessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 
+      Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3
+      Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3 Pessoa3</P>
+    <P id="Pessoa4">Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4
+      Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 v Pessoa4 Pessoa4 v Pessoa4 v Pessoa4 Pessoa4 v
+      Pessoa4 v Pessoa4 Pessoa4 Pessoa4 Pessoa Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4
+      Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 Pessoa4 v vPessoa4 Pessoa4 Pessoa4 Pessoa4</P>
+    <
+    <a href="https://www.google.com.br/" target="_blank">Página do Google</a>
   </body>
 </html>
