--- a/1 - Fundamentos/3 - Introdução à HTML e CSS/2 - HTML & CSS - Primeiros passos em CSS/exercicios/3.2/index.html
+++ b/1 - Fundamentos/3 - Introdução à HTML e CSS/2 - HTML & CSS - Primeiros passos em CSS/exercicios/3.2/index.html
@@ -2,27 +2,53 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>HTML</title>
+    <title>Font-Family-HTML</title>
     <style>
       h1{
-        font-size: 65px;
-        color: orange;
+        /* font-size: 65px;
+        color: orange; */
+        font-family: sans-serif;
+      }
+
+      p {
+        font-weight: 600;
+        font-size: 24px;
+      }
+      body{
+        font-size: 16px;
       }
 
       .list-style {
         background-color: blue;
         color: rgb(5, 5, 5);
+        font-style: italic;
+        line-height: 40px;
+        text-align: center;
+        text-decoration: underline;
+        font-size: 18px;
+      }
+
+      #Amarelo {
+        background-color: yellow;
+      }
+
+      #Vermelho{
+        background-color: red;
+      }
+
+      #Marrom{
+        background-color: brown;
       }
 
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p class="list-style">Qual é a sua cor favorita?</p>
+    <p>Qual é a sua cor favorita?</p>
     <ul class="list-style">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="Amarelo">Amarelo</li>
+      <li id="Vermelho">Vermelho</li>
+      <li id="Marrom">Marrom</li>
     </ul>
   </body>
 </html>
