--- a/1 - Fundamentos/3 - Introdução à HTML e CSS/2 - HTML & CSS - Primeiros passos em CSS/exercicios/3.2/index.html
+++ b/1 - Fundamentos/3 - Introdução à HTML e CSS/2 - HTML & CSS - Primeiros passos em CSS/exercicios/3.2/index.html
@@ -2,8 +2,10 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>Font-Family-HTML</title>
-    <style>
+    <title>CSS Básico</title>
+    <!-- 1 - Coloque todo o CSS criado até agora nos exercícios anteriores em um arquivo externo. -->
+    <link rel="stylesheet" type="text/css" href="style.css">  
+    <!-- <style>
       h1{
         /* font-size: 65px;
         color: orange; */
@@ -40,7 +42,7 @@
         background-color: brown;
       }
 
-    </style>
+    </style> -->
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
