Colocando os comandos CSS em um style.css  separado e Criar um link dentro do index.html  relacionado.

--- a/1 - Fundamentos/3 - Introdução à HTML e CSS/2 - HTML & CSS - Primeiros passos em CSS/exercicios/3.2/index.html
+++ b/1 - Fundamentos/3 - Introdução à HTML e CSS/2 - HTML & CSS - Primeiros passos em CSS/exercicios/3.2/index.html
@@ -5,10 +5,9 @@
     <title>CSS Básico</title>
     <!-- 1 - Coloque todo o CSS criado até agora nos exercícios anteriores em um arquivo externo. -->
     <link rel="stylesheet" type="text/css" href="style.css">  
-    <!-- <style>
-      h1{
-        /* font-size: 65px;
-        color: orange; */
+    <style>
+
+      /* h1{
         font-family: sans-serif;
       }
 
@@ -40,9 +39,9 @@
 
       #Marrom{
         background-color: brown;
-      }
+      } */
 
-    </style> -->
+    </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
